# binary-distillation

./: LICENSE.md  README.md  example usage.py  examples.ipynb  nrtl.py  objects.py  operations.py  polynomial_fit.py  pyproject.toml  tests.py
binary_distillation/: polynomial_fit.py  specifications.py  stages.py
binary_distillation/thermodynamics/: nrtl.py  vle.py
pystill/: __init__.py  design.py  equilibrium.py  solvers.py
