[project]
name = "pystill"
description = "Module for designing binary distillation columns"
version = "0.0.1"
authors = [
    { name = "Mark Levchenko", email = "nibhscripta@tutanota.com" }
]
readme = "README.md"
requires-python = ">=3.8" 
dependencies = [
    "numpy",
    "scipy"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"